--- a/src/apps/location/index.html
+++ b/src/apps/location/index.html
@@ -39,4 +39,24 @@
             VALORA EN GOOGLE
         </a>
     </div>
+    <div class="box">
+        {{location4Address}}
+        <br/>
+        <br/>
+        {{parkingDiscount}}
+        <br/>
+        <br/>
+
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d799.5128186771196!2d-4.425167670772344!3d36.7213297737146!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd72f74f7cd46b83%3A0x2560e0fae90cc7a6!2sLovely%20Beautee%20Malaga%20%C2%B7%20Centro%20de%20Belleza!5e0!3m2!1ses!2ses!4v1675012445973!5m2!1ses!2ses"
+                width="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+        <a class="button clickable white-color green-bg-color fa fa-map" target="_blank"
+           href="https://maps.google.com/?q={{location4Latitude}},{{location4Longitude}}">
+            {{buttonText}}
+        </a>
+        <!-- <br/><br/>
+        <a class="button clickable white-color green-bg-color fa fa-google" target="_blank" href="http://search.google.com/local/writereview?placeid=ChIJncIbQTX3cg0RYv19-GiRmJ4">
+            VALORA EN GOOGLE
+        </a> -->
+    </div>
 </div>
