move to nx static

--- a/newsletter.html
+++ b/newsletter.html
@@ -1,12 +1,7 @@
 <p>
-    ¿Aún no conoces los beneficios del tratamiento <strong>Indiba Deep Beauty</strong>? ¿A que 
-    estas esperando? ¡Ahora más que nunca es la ocasión!
-    </p><p>
-¿No sabes en qué consiste? En un tratamiento efectivo, no invasivo, que mejora
-el aspecto de nuestra piel en una sola sesión. ¿Pedís mucho? Puede, pero os
-aseguramos que es posible. <strong>Indiba</strong>, modalidad de radiofrecuencia capaz de hacer por
-vuestro rostro todo esto. Un método increíble para la piel capaz de mejorar la flacidez,
-hidratación... ¡Resulta casi mágico!
+    In & Out crece... si si lo que leeis... nos complace comunicaros que desde ayer
+tenemos un nuevo centro ubicado en <strong>Calle Puerta Nueva 1</strong> 
+(cerca Calle Compania) donde seguiremos ofreciendo nuestro servicios.
 </p>
 </p>
 </td>
@@ -19,18 +14,10 @@ hidratación... ¡Resulta casi mágico!
                     <table border="0" cellspacing="0" cellpadding="0">
                         <tr>
                             <td align="center" style="border-radius: 3px;" bgcolor="#56ab2a">
-                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-86" target="_blank" style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff;
+                                <a href="https://www.inandoutbelleza.es" target="_blank" style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff;
                                     text-decoration: none; text-decoration: none; padding: 15px 25px;
                                     border-radius: 2px; border: 1px solid #56ab2a; display: inline-block;">
-                                    COMPRA FACIAL
-                                </a>
-                            </td>
-                            <td>&nbsp;</td>
-                            <td align="center" style="border-radius: 3px;" bgcolor="#56ab2a">
-                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-88" target="_blank" style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff;
-                                    text-decoration: none; text-decoration: none; padding: 15px 25px;
-                                    border-radius: 2px; border: 1px solid #56ab2a; display: inline-block;">
-                                    COMPRA CORPORAL
+                                    ENTRA EN LA WEB
                                 </a>
                             </td>
                         </tr>
@@ -44,23 +31,20 @@ hidratación... ¡Resulta casi mágico!
     <td bgcolor="#ffffff" align="left"
         style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Arial', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
        <p>
-
-<strong>Indiba</strong> os devolverá, un aspecto sereno, joven, firme y dulce. Un efecto que
-marca la diferencia en vuestra cara después de pasar por ella. Una sola sesión es
-suficiente para obtener un resultado real y palpable.
+Además, estrenamos una nueva web donde podrás ver todos nuestros productos y
+servicios de forma más accesible, mejor estructurada y más visual. Ha sido renovada con
+una estética más limpia aportando un acceso más intuitivo.
 </p><p>
-Si bien es cierto que su efecto es acumulativo: rejuvenece la piel, reafirma el
-rostro, cuello y regenera el colágeno y elastina, y que cuantas más sesiones disfrutéis
-más beneficios obtendrás. La sensación que produce es relajante y agradable.
+Os invitamos a que os paséis por este nuevo centro o si lo prefieres por nuestra
+nueva web, donde estaremos encantadas de atenderos.
 </p><p>
-¿Te lo vas a perder?
-Este mes lo encontraréis en nuestros centros a un precio de 47€ la sesión facial
-o corporal. ¡Que mejor manera de empezar el año! ¡Os esperamos!
+<strong>Pasaté por nuestro nuevo centro de Puerta Nueva 1 y recoge nuestra bolsa mas
+“In” de regalo.</strong>
+¡Os esperamos!
+</p>
+<p style="text-align: center;">
+    <img style="height: 300px" src="https://www.inandoutbelleza.es/google/drive/novedades/desktop.nuevo-centro-in-and-out-puertanueva-malaga.jpg" alt="Nuevo Centro" />
 </p>
 <p>
-            <strong>
-                Si no quieres recibir más promociones entra en tu
-                <a href="https://www.inandoutbelleza.es/es/cuenta" style="color: #56ab2a;">cuenta</a>
-                y elimina la subscripción
-            </strong>
+            
         </p>
