--- a/src/new.html
+++ b/src/new.html
@@ -59,7 +59,7 @@
                 <tr>
                     <td align="center" valign="top" style="padding: 40px 10px 40px 10px;">
                         <a href="https://www.inandoutbelleza.com" target="_blank">
-                            <img alt="Logo" src="https://www.inandoutbelleza.es/assets/images/manzana_white.png" width="70" height="70" style="display: block; width: 70px; max-width: 70px; min-width: 70px; font-family: 'Arial', Helvetica, Arial, sans-serif; color: #ffffff; font-size: 18px;" border="0">
+                            <img alt="Logo" src="https://www.inandoutbelleza.es/assets/manzana_white.png" width="70" height="70" style="display: block; width: 70px; max-width: 70px; min-width: 70px; font-family: 'Arial', Helvetica, Arial, sans-serif; color: #ffffff; font-size: 18px;" border="0">
                         </a>
                         <h3 style="color: white; font-family: Arial;font-size: 27px;padding: 0;margin: 10px 0 0 0;">In&Out</h3>
                     </td>
