--- a/novedad.html
+++ b/novedad.html
@@ -1,42 +1,16 @@
 <p>
-    Ha llegado a nuestro centro In&Out... sigue leyendo...
-    </p>
-    </p>
-    <strong>¿QUÉ ES?</strong>
-    <p>
-    <p>
-    LPG, es una técnica natural, no invansiva y no agresiva. Se trata de un
-    equipo que dispone un cabezal compuesto por rodillos motorizados que se van
-    desplazando por el cuerpo. Combina tres movimientos: ondulado, en espiga y en
-    forma de ocho. Gracias a esta combinación de movimientos se consigue una
-    estimulación mecánica de la piel que permite reactivar el mecanismo de las
-    células. Así, el organismo es capaz de acelerar la producción de sustancias
-    rejuvenecedoras como el colágeno, la elastina y el ácido hialurónico y conseguir
-    una piel más firme, activar el proceso de eliminación de células grasas para
-    estilizar la silueta y estimular un drenaje linfático para una acción detox profunda.
-    </p>
-    <p>
-    <strong>¿PARA QUÉ SIRVE?</strong>
-    </p>
-    <p>
-    LPG a nivel corporal combate la celulitis, elimina la grasa localiza,
-    reafirma la piel y reduce el efecto de piernas cansadas, provocando una
-    sensación de bienestar y mejoría general de todo el organismo. A nivel de facial
-    esta tecnología estimula el rejuvenecimiento facial reafirmadno los tejidos y
-    aportando una mayor elasticidad.
-    </p>
-    <p>
-    Los resultados se pueden notar a partir de la primera sesión. En cuanto al
-    número de sesiones será el profesional el que decida el número de sesiones en
-    función de la necesidad de cada piel aunque lo recomendado es un ciclo de 40
-    minutos dos veces por semana.
-    </p>
-    <p>
-    ¿A qué estás esperando para pedir cita? Pidela sin compromiso y
-    estaremos encantadas de atenderte para hacerte el protocolo más adecuado a
-    la necesidad que tengas. Su precio será de 60€ la sesión aunque también te
-    puedes beneficiar de nuestros bonos.
-    </p>
-    <p>
-    ¡Os esperamos!
+    In & Out crece... si si lo que leeis... nos complace comunicaros que desde ayer
+tenemos un nuevo centro ubicado en <strong>Calle Puerta Nueva 1</strong> 
+(cerca Calle Compania) donde seguiremos ofreciendo nuestro servicios.
+</p><p>
+Además, estrenamos una nueva web donde podrás ver todos nuestros productos y
+servicios de forma más accesible, mejor estructurada y más visual. Ha sido renovada con
+una estética más limpia aportando un acceso más intuitivo.
+</p><p>
+Os invitamos a que os paséis por este nuevo centro o si lo prefieres por nuestra
+nueva web, donde estaremos encantadas de atenderos.
+</p><p>
+<strong>Pasaté por nuestro nuevo centro de Puerta Nueva 1 y recoge nuestra bolsa mas
+“In” de regalo.</strong>
+¡Os esperamos!
 </p>
